shopingkart/src/objects/shipment__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>shipment</relationshipLabel>
        <relationshipName>shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>shipment</relationshipLabel>
        <relationshipName>shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>shipment</label>
    <nameField>
        <label>shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>shipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>dateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>endDate__c &gt; startDate__c</errorConditionFormula>
        <errorMessage>End date must be greater than start date</errorMessage>
    </validationRules>
</CustomObject>